--- a/src/assets/styles/template/_side-nav.css
+++ b/src/assets/styles/template/_side-nav.css
@@ -1,15 +1,15 @@
 @layer components {
   .side-nav {
-    @apply flex-col flex-auto flex-shrink-0 z-20 transition-all ease-in-out duration-200 print:hidden sticky top-0 h-screen;
+    @apply flex-col flex-auto shrink-0 z-20 transition-all ease-in-out duration-200 print:hidden sticky top-0 h-screen;
   }
 
   .side-nav-content {
-    height: calc(100vh - theme("spacing.16"));
+    height: calc(100vh - theme("spacing.8"));
     @apply overflow-y-auto;
   }
 
   .side-nav-light {
-    @apply bg-white border-r border-gray-200;
+    @apply bg-[#FED7AA] border-r border-gray-200;
   }
 
   .side-nav-dark {
@@ -17,6 +17,6 @@
   }
 
   .side-nav-bg {
-    @apply border-r bg-orange-50 border-gray-200 dark:bg-gray-800 dark:border-gray-700;
+    @apply border-r bg-[#FFFAF5] border-gray-200 dark:bg-gray-900 dark:border-gray-800;
   }
 }
