--- a/src/assets/styles/components/_menu-item.css
+++ b/src/assets/styles/components/_menu-item.css
@@ -1,6 +1,6 @@
 @layer components {
   .menu-item {
-    @apply cursor-pointer font-normal px-3 py-2! rounded-lg flex items-center w-full whitespace-nowrap gap-x-2 transition-colors duration-150 text-slate-600 dark:text-gray-400;
+    @apply cursor-pointer font-normal px-3 py-2 rounded-lg flex items-center w-full whitespace-nowrap gap-x-2 transition-colors duration-150 text-slate-600 dark:text-gray-400;
 
     &.menu-item-hoverable {
       @apply hover:text-slate-900 hover:bg-white/40 dark:hover:text-gray-100 dark:hover:bg-gray-700;
@@ -16,10 +16,10 @@
   }
 
   .menu-collapse-item {
-    @apply cursor-pointer select-none font-normal px-3 py-2! rounded-lg flex items-center justify-between transition-colors duration-200 text-slate-600 hover:text-slate-900 hover:bg-white/40 dark:text-gray-400 dark:hover:text-gray-100 dark:hover:bg-gray-700;
+    @apply cursor-pointer select-none font-normal px-3 py-2 rounded-lg flex items-center justify-between transition-colors duration-200 text-slate-600 hover:text-slate-900 hover:bg-white/40 dark:text-gray-400 dark:hover:text-gray-100 dark:hover:bg-gray-700;
 
     &.menu-collapse-item-active {
-      @apply text-slate-900;
+      @apply text-slate-900 dark:text-gray-100;
     }
   }
 
